Fix post form css, and preserve line breaks in post display.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,7 +13,7 @@ a, h1 {
 label {
     float: left;
 }
-input {
+input, textarea {
     display: inline-block;
     float: left;
 }
